Fix like counts in dark mode

--- a/_webpack/stylesheets/_dark.scss
+++ b/_webpack/stylesheets/_dark.scss
@@ -223,6 +223,10 @@ body.dark {
             background-color: $darkSecondary;
         }
     }
+
+    .heart {
+        background-color: transparent;
+    }
 }
 
 /* Table */
